pagination on my radios some css glitches here and there

--- a/yaapp/templates/yabase/app/pagination.mustache
+++ b/yaapp/templates/yabase/app/pagination.mustache
@@ -1,3 +1,4 @@
+{% load i18n %}
 <div class='pagination'>
-	<button href="#" class='yabutton-large servernext'>Show more</button>
+	<button href="#" class='yabutton-large servernext'>{% trans "Show more" %}</button>
 </div>
