fixed mess with git revert

--- a/yaapp/templates/yabase/app/myRadios/myRadiosPage.mustache
+++ b/yaapp/templates/yabase/app/myRadios/myRadiosPage.mustache
@@ -5,5 +5,6 @@
     <ul id='results' class='radio-with-stats-cells'>
     <img class='loading-mask' src='/media/images/loading.gif'/>
     </ul>
+    <div class='cell-pagination' id='pagination'></div>
     </div>
 </div>
