--- a/yaapp/templates/yabase/app/users/usersPage.mustache
+++ b/yaapp/templates/yabase/app/users/usersPage.mustache
@@ -1,6 +1,6 @@
 {% load i18n %}
-<div class='span12'>
-    <h1>{% trans "Users" %}</h1>
+<div class='span12 profile-background'>
+    <h2 class='zone-title'>{% trans "Connected users near your location" %}</h2>
     <ul id='results'>
     <img class='loading-mask' src='/media/images/loading.gif'/>
     </ul>
