added white background loading.gif

--- a/yaapp/templates/yabase/app/friends/userFriendsPage.mustache
+++ b/yaapp/templates/yabase/app/friends/userFriendsPage.mustache
@@ -3,7 +3,7 @@
     <button class='yabutton right' id='back-btn'>{% trans 'Back to profile' %}</button>
     <h2 class='zone-title'>{% trans "Friends" %}</h2> 
     <ul id='results'>
-    <img class='loading-mask' src='/media/images/loading.gif'/>
+    <img class='loading-mask' src='/media/images/loading-white.gif'/>
     </ul>
     <div class='cell-pagination' id='pagination'></div>
 </div>
