--- a/yaapp/templates/yabase/app/radio/radioPage.mustache
+++ b/yaapp/templates/yabase/app/radio/radioPage.mustache
@@ -14,7 +14,7 @@
     <div id='webapp-wall-input'></div>
     <div>
     <ul id='wall'>
-    <img class='loading-mask' src='/media/images/loading.gif'/>
+    <img class='loading-mask' src='/media/images/loading-white.gif'/>
     </ul>
     </div>
     <div id='pagination'></div>
