--- a/yaapp/templates/yabase/app/users/usersPage.mustache
+++ b/yaapp/templates/yabase/app/users/usersPage.mustache
@@ -2,7 +2,7 @@
 <div class='span12 profile-background'>
     <h2 class='zone-title'>{% trans "Connected users near your location" %}</h2>
     <ul id='results'>
-    <img class='loading-mask' src='/media/images/loading.gif'/>
+    <img class='loading-mask' src='/media/images/loading-white.gif'/>
     </ul>
     <div class='cell-pagination' id='pagination'></div>
 </div>
