added track details on radio wall page

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -81,6 +81,9 @@
    <script type="text/html" id="radioTemplate">
       {% include "yabase/app/radio/radio.mustache" %}
    </script>
+   <script type="text/html" id="trackInRadioTemplate">
+      {% include "yabase/app/radio/track.mustache" %}
+   </script>
 
    <script type="text/html" id="trackTemplate">
       {% include "yabase/app/track.mustache" %}
