--- a/yaapp/templates/yabase/app/radio/radioPage.mustache
+++ b/yaapp/templates/yabase/app/radio/radioPage.mustache
@@ -1,14 +1,11 @@
 {% load i18n %}
 <div class='row'>
 <div class='span4'>
+    <div id='webapp-track'></div>
     <div id='webapp-radio'></div>
     <div class='well'>
     <ul id='webapp-radio-users' class='thumbnails'></ul>
     </div>
-    <!-- <div class='well'>
-    <h2>{% trans "Similar radios" %}</h2>
-	<ul id='webapp-similar-radios' class='thumbnails'></ul> 
-    </div>-->
 </div>
 <div class='span8 wall-container'>
     <div id='webapp-wall-input'></div>
