added real values for gender, age & city in profile page

--- a/yaapp/templates/yabase/app/profile/user.mustache
+++ b/yaapp/templates/yabase/app/profile/user.mustache
@@ -20,7 +20,7 @@
         <%^is_friend%>{% trans "Follow" %}<%/is_friend%>
 	</button>
     <%/owner%>
-    <em>23 ans, Femme, Montpellier</em>
+    <em><% agc %></em>
     <p class="profile-bio"><% bio_text %></p>
    </div>
 	<div class='separation-high'>
