--- a/yaapp/templates/yabase/app/radio/track.mustache
+++ b/yaapp/templates/yabase/app/radio/track.mustache
@@ -1,8 +1,9 @@
 {% load i18n %}
-   <div id='webapp-track-picture' class='thumbnail'>
-       <img src="<% cover %>" width="210px" height="210px"/>
+   <div id='webapp-track-container'>
+		<div id='webapp-track-picture'>
+       		<img src="<% cover %>" width="210px" height="210px"/>
+   		</div>
+   		<div id='webapp-track-title'>
+            <h2><% title %></h2>
+   		</div>
    </div>
-   <div id='webapp-track-title'>
-        <h2><% title %></h2>
-   </div>
-   
