--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -1379,7 +1379,7 @@ input::-webkit-input-placeholder {
     height:210px;
     width:210px;
     position:relative;
-    margin:25px 22px 20px 43px;
+    margin:25px 22px 20px 45px;
 }
 
 #webapp-track-picture {
@@ -1389,12 +1389,14 @@ input::-webkit-input-placeholder {
 }
 
 #webapp-track-title {
-    width:210px;
+    width:208px;
     position:absolute;
+    border:1px solid black;
     background-color: rgba(39, 37, 36, 0.80);
     bottom:0px;
     left:0px;
     border-radius:0px 0px 5px 5px;
+    box-shadow:0px 1px 1px grey inset;
 }
 
 #webapp-track-title h2 {
