--- a/yaapp/templates/yabase/app/radio/radio.mustache
+++ b/yaapp/templates/yabase/app/radio/radio.mustache
@@ -3,7 +3,7 @@
        <img src="<% picture %>" width="210px" height="210px"/>
    </div>
    <div id='webapp-radio-title'>
-        <h1><a href='/app/profile/<%#creator%><% username %><%/creator%>/'><% name %></a></h1>
+        <h1><% name %> {% trans "by" %} <a href='/app/profile/<%#creator%><% username %>/'><% name %><%/creator%></a></h1>
    {% if request.user.is_authenticated %}
    <a class="btn" id='btn-favorite'>
     <i class="icon-star-empty"></i>
