--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -33,9 +33,11 @@
         </div>
         <div id="sub-header-separation">
         </div>
+            {% if request.user.is_authenticated %}
             <a id="create-radio" href="#">
                 <span>{% trans "Create radio" %}</span>
             </a>
+            {% endif %}
         	<div id="search-bar">
 				<input type="text" id="search-input" class="unstyle" placeholder="Rechercher"/>
 				<input type="submit" value="" id="search-symbol" class="unstyle"/>
