updated landing page

--- a/yaapp/templates/yabase/app/favorites/favoritesPage.mustache
+++ b/yaapp/templates/yabase/app/favorites/favoritesPage.mustache
@@ -22,7 +22,7 @@
     Already registered but you lost your credentials ? Go to the <a href='{{lost_password_url}}'>lost password page</a>.
     </p>
     <p class='lead'>    
-    No account yet? follow the <a href='{{signup_url}}'>registration page</a> and join yasound in a few minutes.
+    No account yet? Get on the <a href='{{signup_url}}'>registration page</a> and join yasound in a few minutes.
     </p>
     {% endblocktrans %}
 </div>
