--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -316,7 +316,7 @@
         <h3>{% trans "Share" %}</h3>
     </div>
     <div class="modal-body">
-        <p>{% trans "Share options here:" %}
+        <p>{% trans "Share this song on:" %}
         </p>
         <ul>
         <li><a href='#' id='fb_share'>{% trans "Facebook" %}</a></li>
