updated yatooltip-share to fit with header-social-btn

--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -36,14 +36,14 @@
 
 
 <div class="header-social-btn" id="first-social-btn">
-    <a id="share-btn" data-toggle="modal" href="#modal-share" class='yatooltip'>
-    <span class="yatoolelt">{% trans "Share" %}</span>
+    <a id="share-btn" data-toggle="modal" href="#modal-share" class='yatooltip-share'>
+    <span class="yatoolelt-share">{% trans "Share" %}</span>
     </a>    
         
 </div>
 <div class="header-social-btn">
-    <a href="#" id="love-btn" class='yatooltip'>
-        <span class="yatoolelt">{% trans "Like current song" %}</span>
+    <a href="#" id="love-btn" class='yatooltip-share'>
+        <span class="yatoolelt-share">{% trans "Like current song" %}</span>
     </a>
 </div>
 <div class="header-social-btn"> 
