--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -255,7 +255,7 @@ body {
 
 .header-social-btn {
     float:left;
-    display:inline-block;
+    display:block;
     padding: 38px 0px 0px 10px;
 }
 
@@ -1792,6 +1792,11 @@ ul#notifications .read {
 	margin-left:10px;
 }
 
+#infos a {
+    color:#58595c;
+    text-decoration:none;
+}
+
 /**
  * My radios
  */
@@ -2016,6 +2021,50 @@ ul .radio-with-stats-cells li {
 	top:-18px;
 	left:59px;
 }
+
+
+
+.yatooltip-share {
+	opacity:100;
+	text-decoration:none;
+	position:relative;
+}
+
+.yatooltip-share:hover {
+	text-decoration:none;
+}
+
+.yatooltip-share .yatoolelt-share {
+	opacity:0;
+	display:none;
+	position:absolute;
+}	
+
+.yatooltip-share:hover .yatoolelt-share {
+	position:absolute;
+	display:block;
+	height:29px;
+    width:130px;
+	background-image:url('../app/images/tooltip-bg.png');
+	top:40px;
+	left:-57px;
+	border:1px solid black;
+	box-shadow:0px 1px 0px #999b9c inset;
+	border-radius:6px;
+	color:white;
+	text-shadow:1px 1px 1px black;
+	text-align:center;
+	line-height:30px;
+	opacity:100;
+}
+
+.yatooltip-share:hover .yatoolelt-share:after {
+	content:url('../app/images/tooltip-pointer.png');
+	position:absolute;
+	top:-18px;
+	left:59px;
+}
+
 
 .no-margin {
 	margin:0px;
