--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -16,6 +16,11 @@
     <meta name="language" content="french" />
     <link rel="stylesheet" href="/media/bootstrap/css/bootstrap.min.css"/>
 
+<!--[if lt IE 9]>
+<script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
+<![endif]-->
+
+
 {% block extra_head %}
     {% block fb_open_graph %}{% endblock %}
     
