fixed margin radio cells

--- a/yaapp/templates/yabase/app/home/homePage.mustache
+++ b/yaapp/templates/yabase/app/home/homePage.mustache
@@ -1,8 +1,6 @@
 {% load i18n %}
-<div class='row'>
-    <div class=''>
-        <ul id='selected-radios' class='radio-cells no-margin'>
-            <img class='loading-mask' src='/media/images/loading.gif'/>
-        </ul>
-    </div>
-</div>    
+<div class=''>
+    <ul id='selected-radios' class='radio-cells'>
+        <img class='loading-mask' src='/media/images/loading.gif'/>
+    </ul>
+</div>
