--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -605,7 +605,7 @@ div .selector span {
     background-image:url('../app/images/create-radio-btn-bg.png');
     height:30px;
     width:147px;
-    margin: 13	px 13px;
+    margin: 13px 13px;
     border: 1px solid #b8bec1;
     border-radius:20px;
     text-align:center;
@@ -689,7 +689,9 @@ input::-webkit-input-placeholder {
 }
 
 /*--- RADIO CELL ---*/
+
 .radio-cells {
+  /*margin-left: -28px; à mettre en place pour avoir des marges larges entre cellules*/
   margin-left: 0px;
   list-style: none;
   *zoom: 1;
@@ -727,6 +729,7 @@ input::-webkit-input-placeholder {
     width:217px;
     margin-top:0;
     margin-bottom:12px;
+    /*margin-left:25px; à mettre en place pour avoir des marges larges entre cellules*/
     margin-left:14px;
     margin-right:0;
     position:relative;
@@ -741,8 +744,7 @@ input::-webkit-input-placeholder {
 	position:relative;
 	top:4px;
 	left:3px;
-	box-shadow:0px 1px 3px #c7c7c7;
-    border-radius:20px;
+	box-shadow:0px 0px 4px #c7c7c7;
 }
 
 .radio-border {
@@ -981,7 +983,7 @@ input::-webkit-input-placeholder {
 
 
 #webapp-container {
-    margin-top: 156px;
+    margin-top: 158px;
 	min-height:822px;
 	margin-bottom:158px;
 }
