fixed 404 error for missing image
* created custom yasound theme for uniform

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="/media/css/flashblock.css"/>
     <link rel="stylesheet" href="/media/css/auth-buttons.css"/>
     <link rel="stylesheet" href="/media/jquery-ui-1.8.21.custom/css/ui-lightness/jquery-ui-1.8.21.custom.css"/>
-	<link rel="stylesheet" href="/media/css/uniform.default.css/uniform.default.css" />
+	<link rel="stylesheet" href="/media/css/uniform.yasound.css/uniform.yasound.css" />
     
     
     <link rel="stylesheet" href="/media/js/colibri/colibri.css"/>
