--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -1508,7 +1508,7 @@ ul .user-cell:hover .caption {
 }
 
 /**
- * Notifications
+ * Wall
  */
 
 #webapp-wall-input {
@@ -1601,6 +1601,20 @@ ul#notifications li div {
 
 ul#notifications .read {
     font-weight: normal;
+}
+
+/**
+ * Notifications
+ */
+
+.notification-container h1 {
+    height:104px;
+    border-radius:6px 6px 0px 0px;
+    box-shadow:0px -1px 5px #e2e2e2;
+    background-color:white;
+    font-size:42px;
+    font-weight:bold;
+    color:#434343;
 }
 
 /**
