--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -747,6 +747,7 @@ input::-webkit-input-placeholder {
 	top:4px;
 	left:3px;
 	box-shadow:0px 0px 4px #c7c7c7;
+    border-radius:5px;
 }
 
 .radio-border {
