--- a/yaapp/templates/yabase/app/notifications/notificationsPage.mustache
+++ b/yaapp/templates/yabase/app/notifications/notificationsPage.mustache
@@ -1,6 +1,6 @@
 {% load i18n %}
 <div class='row-fluid'>
-	<div class='span12 notification-container'>
+	<div class='span12'>
 	    <h1>{% trans "Notifications" %}</h1>
 	    
         <div class="btn-group" data-toggle="buttons-radio" id='notifications-toolbar'>
