added error handling support

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -348,6 +348,21 @@
     </div>
 </div>        
 
+<div class="modal hide fade" id="modal-error">
+    <div class="modal-header">
+        <button class="close" data-dismiss="modal">×</button>
+        <h3>{% trans "Connection error" %}</h3>
+    </div>
+    <div class="modal-body">
+        <p>{% trans "Unable to connect Yasound server right now" %}
+        </p>
+    </div>
+    <div class="modal-footer">
+        <a href="#" class="btn" data-dismiss="modal">{% trans "Dismiss" %}</a>
+        <a href="#" class="btn btn-primary">{% trans "Reload page" %}</a>
+    </div>
+</div>        
+
     
 <div id='webapp-container'>{% block content%}{%endblock%}</div>
 
