--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -354,7 +354,7 @@
         <h3>{% trans "Connection error" %}</h3>
     </div>
     <div class="modal-body">
-        <p>{% trans "Unable to connect Yasound server right now" %}
+        <p>{% trans "Unable to connect Yasound server right now." %}
         </p>
     </div>
     <div class="modal-footer">
