--- a/yaapp/templates/yabase/app/signup/signup.mustache
+++ b/yaapp/templates/yabase/app/signup/signup.mustache
@@ -1,7 +1,7 @@
 {% load i18n %} 
 <div class='row>
     <div class='span12'>
-        <h2>{% trans "Contact" %}</h2>
+        <h2>{% trans "Signup" %}</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In molestie lorem augue. Etiam lectus sapien, vehicula vitae eleifend in, adipiscing et odio. Integer ut eros id velit laoreet pulvinar. Duis libero dolor, volutpat a pulvinar nec, viverra in dui. Quisque ullamcorper scelerisque venenatis. Ut mollis libero eget neque consectetur vestibulum. Vestibulum non nunc libero, non facilisis ipsum.
         Nunc orci orci, accumsan eget convallis fringilla, dignissim eget orci. Pellentesque nulla odio, vulputate in luctus eget, fermentum eget neque. Nulla tortor odio, lacinia semper mattis sed, aliquet et lorem. Cras iaculis metus id purus volutpat a sagittis mi mattis. Donec suscipit tempus ante, nec commodo arcu pellentesque at. Nunc in dolor enim, sit amet eleifend nulla. Donec rutrum, eros et facilisis condimentum, libero odio aliquam ipsum, vel venenatis purus quam non odio. Donec mollis consectetur nibh, vitae dignissim lectus iaculis eget. Integer iaculis tempor adipiscing. Vivamus tortor lectus, interdum eu lobortis id, vehicula nec nunc. Nam nisi libero, sagittis at cursus vitae, tempus sit amet neque.
         Cras nibh tellus, pharetra elementum vehicula a, vestibulum quis est. In hac habitasse platea dictumst. Praesent sed dui at justo vestibulum rhoncus vitae tempus lorem. Curabitur et dolor felis. Vestibulum dignissim tellus in turpis faucibus nec mollis magna elementum. Sed commodo, arcu sed commodo vestibulum, mi arcu ultrices sem, id vestibulum dui enim a erat. Mauris non metus nibh, nec fermentum nibh. Sed ultrices tempor lobortis. Donec metus tortor, tincidunt eu tempus nec, lacinia id mauris. Aenean convallis ultricies lectus, ultricies commodo dolor posuere in. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl urna, malesuada in eleifend sed, placerat non metus.
@@ -9,4 +9,4 @@
         Aenean metus ipsum, vehicula vitae sodales eget, volutpat eu mauris. Nam lobortis porta leo tincidunt molestie. Mauris dignissim accumsan arcu eu cursus. In elit sapien, auctor et gravida sed, cursus eu dui. Integer vitae convallis leo. Donec vehicula lobortis mi nec tempus. Quisque volutpat faucibus dui, non imperdiet erat fringilla eget. Quisque ut turpis et tortor feugiat semper non eget justo. Quisque consectetur pellentesque enim, vel tincidunt ligula sollicitudin sed. Nam sit amet erat mi, sed aliquam leo. Nulla auctor lacinia lacus nec tincidunt. Nullam feugiat ornare risus non ultrices. Maecenas quis eleifend tortor. 
     </p>
     </div>
-</div>
+</div>    
