fixed image path

--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -23,7 +23,7 @@
         </ul>
         <div>
             <form>
-                <div class="genre-selector"><img src="../../media/app/images/radio-style-symbol.png" alt="radio symbol"/></div>
+                <div class="genre-selector"><img src="/media/app/images/radio-style-symbol.png" alt="radio symbol"/></div>
                 <p id="form" class="jqtransform">
 					<div id="fix-genre">
                     {{ genre_form.genre }}
