several fixes for ie

--- a/yaapp/media/css/ie.css
+++ b/yaapp/media/css/ie.css
@@ -2,3 +2,9 @@
     display: inline;
 }
 
+
+.radio-cell .mask {
+	filter:alpha(opacity=80); 
+	background-color:black;
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+}
