--- a/yaapp/templates/yabase/app/profile/user.mustache
+++ b/yaapp/templates/yabase/app/profile/user.mustache
@@ -9,7 +9,7 @@
 	<span class='validated'>
         <%^owner%>
         <%#is_friend%>
-		<img src="/media/app/images/profile/validated-profile.png" width="25" height="25" alt="Validated Profile">
+		<img src="/media/app/images/profile/validated-profile.png" width="25" height="25" alt="Validated Profile"/>
 	    <%/is_friend%>
         <%/owner%>
 	</span>
