--- a/yaapp/templates/yabase/app/radioCell.mustache
+++ b/yaapp/templates/yabase/app/radioCell.mustache
@@ -10,7 +10,7 @@
 	
 		<div class='mask' style='display:none;'>
 			<div class="radio-icon">
-				<img src="/media/images/default_album.jpg" width="36" height="36" alt="Radio Radio Picture">
+				<img src="/media/images/default_album.jpg" width="36" height="36" alt="Radio Radio Picture"/>
 			</div>
 			<div class="radio-id">
 	            <%#creator%>
@@ -29,7 +29,7 @@
 	        <img src='<% picture %>' width='32px' height='32px'/>
 	        <%/creator%>
 	        <span class="radio-profile-picture-mask">
-				<img src="/media/app/images/radio/radio-profile-picture-mask.png" width="28" height="28" alt="Radio Profile Picture Mask">
+				<img src="/media/app/images/radio/radio-profile-picture-mask.png" width="28" height="28" alt="Radio Profile Picture Mask"/>
 			</span>
 	    </div>
 	    <div class='caption'>
