--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -322,6 +322,19 @@ body {
 	text-decoration:none;
 }
 
+#profile-picture a {
+	display:block;
+	width:28px;
+	height:28px;
+    border:2px solid white;
+    border-radius:50%;
+}
+
+#profile-picture a img {
+	border:none;
+	border-radius:50%;
+}
+
 /*
 .notification {
     width:38px;
