--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -2,9 +2,7 @@
 {% load i18n %}
 {% load thumbnail %}
 {% load compressed %}
-{% load straight_include %}
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+{% load straight_include %}<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="{{current_locale}}" lang="{{current_locale}}">
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# yasoundev: http://ogp.me/ns/fb/yasoundev#">
     <title>{% block head_title %}Yasound{% endblock %}</title>
@@ -18,6 +16,7 @@
 
 <!--[if lt IE 9]>
 <script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
+<script type="text/javascript" type="text/javascript" src="/media/js/flot/excanvas.min.js"></script>
 <![endif]-->
 
 
@@ -67,7 +66,8 @@
         
 	<!--[if (gte IE 6)&(lte IE 8)]>
 	  <script type="text/javascript" src="/media/js/selectivizr-min.js"></script>
-	  <noscript><link rel="stylesheet" href="/media/css/ie.css" /></noscript>
+	  <link rel="stylesheet" href="/media/css/ie.css" />
+      <link rel="stylesheet" href="/media/css/ie.css" />
 	<![endif]-->
 
     {% compressed_js 'webapp-all' %}
@@ -280,13 +280,13 @@
 		                       {% thumbnail user_profile.picture "28x28" format='PNG' as im %}
 		                        <a href='{% url webapp_profile request.user.username %}' class='yatooltip'>
                                     <span class="yatoolelt">{% trans "Your profile" %}</span>
-									<img src="{{ im.url  }}" width="28" height="28" alt="Profile Picture">
+									<img src="{{ im.url  }}" width="28" height="28" alt="Profile Picture"/>
 								</a>
 		                       {% endthumbnail %}
 		                   {% else %}
 		                        <a href='#' class="yatooltip">
                                     <span class="yatoolelt">{% trans "Your profile" %}</span>
-									<img src="/media/images/default_image.png" width="28" height="28" alt="Profile Picture">
+									<img src="/media/images/default_image.png" width="28" height="28" alt="Profile Picture"/>
 								</a>
 								
 		                   {% endif %}
