--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -32,6 +32,7 @@ body {
 /**
  * Header
  */
+
 #header .navbar-inner {
     background-image: url(/media/app/images/header_bg.png);
     background-repeat: repeat-x;
@@ -1927,6 +1928,125 @@ ul .radio-with-stats-cells li {
 
 .base {
 	border-radius:10px;
+}
+
+/**
+ * SignUp
+ */
+
+.signup-container {
+    height:618px;
+    background-image:url('../app/images/SignUp/signup-bg-gradient.png');
+    background-repeat:repeat-x;
+    border:1px solid #e2e2e2;
+    border-radius:5px;
+    box-shadow:0px 1px 3px #e2e2e2;
+}
+
+.signup-container h2 {
+    display:block;
+    width:100%;
+    text-align:center;
+    color:#434343;
+    font-size:42px;
+    margin-top:49px;
+    margin-bottom:25px;
+}
+
+.signup-container h3 {
+    display:block;
+    width:100%;
+    text-align:center;
+    color:#7c7c7c;
+    font-size:28px;
+    font-weight: normal;
+}
+
+.signup-container .signup-btn-fbk {
+    display:block;
+    height:52px;
+    width:349px;
+    float:left;
+    margin:30px 0px 42px 101px;
+    position:relative;
+    background-image:url('../app/images/SignUp/btn-bg-facebook.png');
+    background-repeat:repeat-x;
+    border:1px solid #283f70;
+    border-radius:5px;
+    box-shadow:0px 1px 2px #c9c9ca;
+}
+
+.signup-container .signup-btn-twitter {
+    display:block;
+    height:52px;
+    width:349px;
+    float:left;
+    margin:30px 0px 42px 33px;
+    position:relative;
+    background-image:url('../app/images/SignUp/btn-bg-twitter.png');
+    background-repeat:repeat-x;
+    border:1px solid #2c7996;
+    border-radius:5px;
+    box-shadow:0px 1px 2px #c9c9ca;
+}
+
+.signup-container a {
+    display:block;
+    margin-left:65px;
+    color:white;
+    font-weight:normal;
+    font-size:17px;
+    line-height:54px;
+    text-decoration: none;
+}
+
+.signup-container img {
+    position:absolute;
+    top:10px;
+    left:17px;
+}
+
+.signup-container #signup-separation-line {
+    height:2px;
+    width:100%;
+    float:left;
+    clear:both;
+    margin-bottom:37px;
+    background-image:url('../app/images/SignUp/signup-separation-line.png');
+    background-repeat:repeat-x;
+}
+
+.signup-container #signup-input {
+    text-align:center;
+    margin-top:35px;
+}
+
+.signup-container #signup-input input {
+    height:53px;
+    width:334px;
+    color:#959595;
+    font-size: 17px;
+    padding:0px;
+    padding-left:15px;
+    margin-left:0px;
+    border:1px solid #9e9e9e;
+    border-radius:5px;
+}
+
+.signup-container #signup-input .right-input {
+    margin-left:33px;
+}
+
+.signup-container #signup-input .bottom-input {
+    margin-top:17px;
+}
+
+.signup-container #signup-input #signup-save-btn {
+    background-image:url('../app/images/common/btn-bg-grey-average.png');
+    margin-top:30px;
+    color:#58595c;
+    text-shadow:1px 1px white;
+    box-shadow:0px 2px 2px #e4e4e4;
 }
 
 /**
