updated signup page
* fixed problem with the 2 floats
* i18n
* placeholder instead of values

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -1986,6 +1986,11 @@ ul .radio-with-stats-cells li {
     font-weight: normal;
 }
 
+.signup-container .signup-btns {
+	clear: both;
+    height:132px;
+}
+
 .signup-container .signup-btn-fbk {
     display:block;
     height:52px;
