--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -305,6 +305,17 @@
                       <div class="header-separation"><img src="/media/app/images/header-separation.png" width="4" height="54" alt="Header Separation"></div>  
                       <a class='float-left' href='{% url login %}?next=/app/'>{% trans 'Login' %}</a>
 		                </div>
+                    <div>
+                      <a href="#"></a>
+                      <a href="#"></a>
+                      <div class='login-separation-line'></div>
+                      <form>
+                        <input>
+                        <input>
+                        <input>
+                      </form>
+                      <a class="login-psw-lost" href="#"></a>
+                    </div>
 		                {% endif %}
 	                </div>
                 </div>
