--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -82,7 +82,7 @@ body {
 }
 
 #login-box-container a:hover {
-    color:#414244;
+    color:white;    
     font-size:15px;
 }
 
@@ -133,28 +133,46 @@ body {
     display:block;
     height:38px;
     width:255px;
+    color:#7f7f7f;
+    font-size:15px;
     border-radius:3px;
     margin:10px 15px;
     padding:0px;
+    box-shadow: 0px 1px 1px #202020;
 }
 
 #login-box-container form #login-btn-connection {
+    width:257px;
     background-image:url('../app/images/Login/login-btn-connection.png');
     background-repeat:repeat-x;
     color:#414244;
     font-size:15px;
     padding:0px;
     border:none;
+    box-shadow: 0px 1px 1px #202020;
 }
 
 #login-box-container .login-psw-lost {
-    background-image:url('../app/images/Login/login-btn-connection.png');
-    background-repeat:repeat-x;
-    color:#414244;
-    font-size:15px;
-    line-height:35px;
-    text-align:center;
+    display:inline;
+    height:20px;
+    padding:0px;
+    font-size:12px;
 }
+
+#login-box-container .login-psw-lost:hover {
+    min-width:100px;
+    font-size:12px;
+    color:white;
+    text-decoration: underline;
+}
+
+#login-box-container:before {
+    content:url('../app/images/Login/login-tooltip.png');
+    position:absolute;
+    top:-13px;
+    right:20px;
+}
+
 
 
 
