--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -52,7 +52,7 @@ body {
 #login a {
     display:block;
     margin-top:31px;
-    margin-left:18px;
+    /*margin-left:12px;*/
     color:white;
 }
 #login a:hover {
@@ -82,7 +82,7 @@ body {
 }
 
 #login-box-container a:hover {
-    color:white;    
+    color:white;
     font-size:15px;
 }
 
@@ -102,7 +102,7 @@ body {
     background-image: url('../app/images/Login/login-btn-fbk.png');
     background-repeat: repeat-x;
     border:1px solid #082029;
-    box-shadow: 0px 1px 1px #696b6c, inset 0px 1px 1px #a2bbf0; 
+    box-shadow: 0px 1px 1px #696b6c, inset 0px 1px 1px #a2bbf0;
 }
 
 #login-box-container #login-btn-twitter {
