--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -39,6 +39,10 @@ body {
 
 /*--- LOGIN ---*/
 
+#login  .header-separation {
+    margin-left:0px;
+}
+
 #login {
     display:block;
     float:left;
@@ -50,14 +54,30 @@ body {
 }
 
 #login a {
-    display:block;
-    margin-top:31px;
-    margin-left:18px;
     color:white;
 }
+
+#login #signup-btn {
+    float:left;
+    display:block;
+    width:70px;
+    margin-top:31px;
+    color:white;
+    text-align: center;
+}
+
+#login #login-btn {
+    float:left;
+    display:block;
+    width:100px;
+    margin-top:31px;
+    color:white;
+    text-align: center;
+}
+
 #login a:hover {
-    color:#dedede;
-    text-decoration:none;
+    color:white;
+    text-decoration: none;
 }
 
 #login-box-container {
@@ -99,14 +119,14 @@ body {
 }
 
 #login-box-container #login-btn-facebook {
-    background-image: url('../app/images/Login/login-btn-fbk.png');
+    background-image: url('../app/images/login/login-btn-fbk.png');
     background-repeat: repeat-x;
     border:1px solid #082029;
     box-shadow: 0px 1px 1px #696b6c, inset 0px 1px 1px #a2bbf0; 
 }
 
 #login-box-container #login-btn-twitter {
-    background-image: url('../app/images/Login/login-btn-twitter.png');
+    background-image: url('../app/images/login/login-btn-twitter.png');
     background-repeat: repeat-x;
     border:1px solid #0f1d3c;
     box-shadow: 0px 1px 1px #636566, inset 0px 1px 1px #baf2fe;
@@ -143,7 +163,7 @@ body {
 
 #login-box-container form #login-btn-connection {
     width:257px;
-    background-image:url('../app/images/Login/login-btn-connection.png');
+    background-image:url('../app/images/login/login-btn-connection.png');
     background-repeat:repeat-x;
     color:#414244;
     font-size:15px;
@@ -167,7 +187,7 @@ body {
 }
 
 #login-box-container:before {
-    content:url('../app/images/Login/login-tooltip.png');
+    content:url('../app/images/login/login-tooltip.png');
     position:absolute;
     top:-13px;
     right:20px;
@@ -1991,7 +2011,7 @@ ul .radio-with-stats-cells li {
 	height:260px;
 	width:940px;
 	margin-top:23px;
-	background-image:url('../app/images/myRadio/my-radio-bg.png');
+	background-image:url('../app/images/my-radio/my-radio-bg.png');
 	border-radius:10px;
 	box-shadow:1px 2px 2px #dcdcdc;
 }
@@ -2083,7 +2103,7 @@ ul .radio-with-stats-cells li {
 
 .signup-container {
     height:618px;
-    background-image:url('../app/images/SignUp/signup-bg-gradient.png');
+    background-image:url('../app/images/sign-up/signup-bg-gradient.png');
     background-repeat:repeat-x;
     border:1px solid #e2e2e2;
     border-radius:5px;
@@ -2121,7 +2141,7 @@ ul .radio-with-stats-cells li {
     float:left;
     margin:30px 0px 42px 101px;
     position:relative;
-    background-image:url('../app/images/SignUp/btn-bg-facebook.png');
+    background-image:url('../app/images/sign-up/btn-bg-facebook.png');
     background-repeat:repeat-x;
     border:1px solid #283f70;
     border-radius:5px;
@@ -2135,7 +2155,7 @@ ul .radio-with-stats-cells li {
     float:left;
     margin:30px 0px 42px 33px;
     position:relative;
-    background-image:url('../app/images/SignUp/btn-bg-twitter.png');
+    background-image:url('../app/images/sign-up/btn-bg-twitter.png');
     background-repeat:repeat-x;
     border:1px solid #2c7996;
     border-radius:5px;
@@ -2164,7 +2184,7 @@ ul .radio-with-stats-cells li {
     float:left;
     clear:both;
     margin-bottom:37px;
-    background-image:url('../app/images/SignUp/signup-separation-line.png');
+    background-image:url('../app/images/sign-up/signup-separation-line.png');
     background-repeat:repeat-x;
 }
 
@@ -2517,7 +2537,7 @@ ul .radio-with-stats-cells li {
 	}
 /*-- MY RADIO --*/
     .radio-with-stats-cells .radio-with-stats {
-        background-image:url('../app/images/myRadio/my-radio-bg-mobile.png');
+        background-image:url('../app/images/my-radio/my-radio-bg-mobile.png');
     }
     .radio-with-stats-cells .radio-with-stats {
         width:465px;
